--- a/city.html
+++ b/city.html
@@ -3,30 +3,43 @@
 <head>
     <title>City</title>
     <link rel="stylesheet" href="format.css">
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <h2>City game by Allison Dolan</h2>
+<div class = "border border-start-0 border-end-0 border-black p-3">
+    <form>
+        <div class="mb-3">
+            <label for="where">Where in the world: </label>
+            <input type ="password" id="where" value="San Diego"> <br>
+        </div>
 
-<form>
-    <label for="where">Where in the world: </label>
-    <input type ="password" id="where" value="San Diego"> <br>
+        <div class="mb-3">
+        <label for="guess">Guess the city: </label>
+        <input type ="text" id="guess" > <br>
+        </div>
+        
+        <input type="button" class= "bg-primary-subtle border-2 border-primary-emphasis rounded-3 shadow-sm px-4 text-center" id="button" onclick="checkCity()" value="Check the Guess"><br>
+    </form>
+    <p id="result1">This text will be replaced </p>
 
-    <label for="guess">Guess the city: </label>
-    <input type ="text" id="guess" > <br>
-
-    <input type="button" id="button" onclick="checkCity()" value="Check the guess">
-</form>
-<p id="result1">This text will be replaced </p>
-
-<div class = "container-img">
-    <img src="Dog.jpg" id="Image" class="img-fluid" alt="Dog" onclick="updatePic()">
+    <div class ="results">
+        <span class = "badge bg-success fs-6 p-2"> Correct Guesses: <span id="found">0</span></span>
+        <br>
+        <span class = "badge bg-danger fs-6 p-2"> Wrong Guesses: <span id="oops">0</span></span>
+    </div>
 </div>
-
-<div class ="results">
-    Correct Guesses: <span id="found">0</span>
-    <br>
-    Wrong Guesses: <span id="oops">0</span>
+<div class = "container-img">
+    <br><img src="Dog.jpg" id="Image" class="img-fluid rounded shadow-lg border-primary" alt="Dog" onclick="updatePic()">
 </div>
 
 <script> 
