dinner and message styled

--- a/city.html
+++ b/city.html
@@ -17,7 +17,7 @@
 
 <h2>City game by Allison Dolan</h2>
 <div class = "border border-start-0 border-end-0 border-black p-3">
-    <form>
+    <form class="mx-auto" style="max-width: 500px;">
         <div class="mb-3">
             <label for="where">Where in the world: </label>
             <input type ="password" id="where" value="San Diego"> <br>
