minor mistake fixed

--- a/city.html
+++ b/city.html
@@ -17,15 +17,15 @@
 
 <h2>City game by Allison Dolan</h2>
 <div class = "border border-start-0 border-end-0 border-black p-3">
-    <form class="mx-auto" style="max-width: 500px;">
+    <form>
         <div class="mb-3">
             <label for="where">Where in the world: </label>
             <input type ="password" id="where" value="San Diego"> <br>
         </div>
 
         <div class="mb-3">
-        <label for="guess">Guess the city: </label>
-        <input type ="text" id="guess" > <br>
+            <label for="guess">Guess the city: </label>
+            <input type ="text" id="guess"> <br>
         </div>
         
         <input type="button" class= "bg-primary-subtle border-2 border-primary-emphasis rounded-3 shadow-sm px-4 text-center" id="button" onclick="checkCity()" value="Check the Guess"><br>
